k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshopx-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eshopx-api
  template:
    metadata:
      labels:
        app: eshopx-api
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-work1
      containers:
        - name: api
          image: davidchen617/eshopx-api:latest
          ports:
            - containerPort: 5177
---
apiVersion: v1
kind: Service
metadata:
  name: eshopx-api
spec:
  selector:
    app: eshopx-api
  ports:
    - port: 5177
      targetPort: 5177
