k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshopx-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eshopx-postgres
  template:
    metadata:
      labels:
        app: eshopx-postgres
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-work1
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: eshopx-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: eshopx-postgres
spec:
  selector:
    app: eshopx-postgres
  ports:
    - port: 5432
      targetPort: 5432
